# fintech-agi-20250412-invoice-processor

./: .gitignore  Makefile  README.md  invoice_field_descriptions.md  prompts.py  pyproject.toml
backend/: .env.example  prompts.py  run.py
backend/app/: main.py  models.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: FileUpload.tsx  ImageViewer.tsx  InvoiceForm.tsx  PDFViewer.tsx
frontend/src/services/: api.ts
frontend/src/types/: invoice.ts
